contactus form added

--- a/contactus.html
+++ b/contactus.html
@@ -20,9 +20,26 @@
         </div>
         <div class="overlay_text">
             <h2>CONTACT US</h2>
+            <br>
             <p>Get in touch!</p>
+            <div id="contact_form">
+                <form>
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" id="name" placeholder="Enter your name">
+                    <br>
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="email" id="email" placeholder="Enter your email">
+                    <br>
+                    <label for="message">Message</label>
+                    <br>
+                    <textarea id="message" placeholder="Enter your message"></textarea>
+                </form>
+            </div>
         </div>
         
         <script src="./travelbloom.js"></script>
     </body>
 </html>
+
