fetch added and console msgs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </ul>
         <div id="searchBar">
             <input type="search" id="search" placeholder="Enter a destination or keyword">
-            <button>Search</button>
-            <button>Clear</button>
+            <button id="searchBtn">Search</button>
+            <button id="clearBtn">Clear</button>
         </div>    
         </nav>
         <div class="home_page">
@@ -25,6 +25,13 @@
         </div>
         <div class="overlay_text">
             <h2>EXPLORE<br>DREAM<br>DESTINATION</h2>
+            <br>
+            <p> It encourages exploration of unfamiliar territories, embracing new cultures, experiences, and perspectives. 
+                Travel fosters curiosity, broadens horizons, and enriches the soul. 
+                It inspires adventure, self-discovery, and connection with diverse landscapes and people. 
+                Stepping beyond the familiar leads to personal growth, lifelong memories, 
+                and a deeper appreciation of the world.
+            </p>
         </div>
         
         <script src="./travelbloom.js"></script>
