--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
                 Start exploring with us today! 🌍✈️
             </p>
         
-            <div id="team" class="team">
+            <div id="team">
                     <h2>OUR TEAM</h2>
                     <div>
                         <span>John Doe</span>
