--- a/aboutus.html
+++ b/aboutus.html
@@ -39,6 +39,11 @@
                         <br>
                         <button>Team Lead</button>
                     </div>
+                    <div>
+                        <span>Michael Johnson</span>
+                        <br>
+                        <button>Sales Manager</button>
+                    </div>  
             </div>
         </div>
 
